--- a/templates/summaries.html
+++ b/templates/summaries.html
@@ -189,7 +189,9 @@
         }
 
         function viewSummary(filename) {
-            window.location.href = `/summary/${filename}`;
+            // URL編碼檔案名稱以處理特殊字符
+            const encodedFilename = encodeURIComponent(filename);
+            window.location.href = `/summaries/${encodedFilename}`;
         }
 
         function moveSelectedToTrash() {
