Fix summary file path resolution issue - 2

--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -119,7 +119,7 @@
                 <i class="bi bi-bookmark-fill bookmark-icon"></i> 我的書籤
             </h1>
             <div class="btn-group">
-                <a href="/summaries" class="btn btn-outline-primary">
+                <a href="/summary" class="btn btn-outline-primary">
                     <i class="bi bi-file-text"></i> 所有摘要
                 </a>
                 <a href="/trash" class="btn btn-outline-warning">
