--- a/templates/summaries.html
+++ b/templates/summaries.html
@@ -191,7 +191,7 @@
         function viewSummary(filename) {
             // URL編碼檔案名稱以處理特殊字符
             const encodedFilename = encodeURIComponent(filename);
-            window.location.href = `/summaries/${encodedFilename}`;
+            window.location.href = `/summary/${encodedFilename}`;
         }
 
         function moveSelectedToTrash() {
