--- a/templates/trash.html
+++ b/templates/trash.html
@@ -56,7 +56,7 @@
                         <a href="/bookmarks" class="btn btn-outline-secondary nav-bookmark">
                             <i class="bi bi-bookmark-fill bookmark-icon"></i> 書籤
                         </a>
-                        <a href="/summaries" class="btn btn-outline-secondary">
+                        <a href="/summary" class="btn btn-outline-secondary">
                             <i class="bi bi-arrow-left"></i> 返回摘要列表
                         </a>
                     </div>
@@ -145,7 +145,7 @@
                     <i class="bi bi-trash"></i>
                     <h4>回收桶是空的</h4>
                     <p>沒有已刪除的檔案</p>
-                    <a href="/summaries" class="btn btn-primary">查看所有摘要</a>
+                    <a href="/summary" class="btn btn-primary">查看所有摘要</a>
                 </div>
                 {% endif %}
             </div>
